--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
   background-color: var(--dark-blue);
 }
 
@@ -35,9 +34,9 @@ body {
 
 .first-btn {
   width: 100%;
-  height: 45%;
+  height: 43%;
   padding: 15px;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
   text-align: center;
   word-spacing: -10px;
@@ -50,10 +49,10 @@ body {
 
 .second-btn {
   width: 100%;
-  height: 45%;
+  height: 43%;
   padding: 15px;
-  margin-top: 50px;
-  font-size: 30px;
+  margin-top: 30px;
+  font-size: 35px;
   font-weight: bold;
   text-align: center;
   word-spacing: -10px;
