--- a/pages/style.css
+++ b/pages/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap');
 
 :root {
   --light-cyan: hsl(193, 38%, 86%);
@@ -15,7 +15,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
   -webkit-tap-highlight-color: transparent;
   ;
 }
@@ -60,11 +60,11 @@ body {
 
 .content {
   padding: 10px 0 10px 10px;
-  font-size: 15px;
+  font-size: 16px;
   color: var(--light-cyan);
   box-shadow: transparent;
   font-weight: 600;
-  font-family: 'Cairo', sans-serif;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
 }
 
 .card-disabled {
