--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap');
 
 :root {
   --light-cyan: hsl(193, 38%, 86%);
@@ -15,7 +15,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -44,7 +44,7 @@ body {
   border: none;
   border-radius: 5px;
   color: var(--light-cyan);
-  font-family: 'Cairo', sans-serif;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
   background-color: var(--dark-grayish-blue);
   box-shadow: 0 3px 0 0 var(--grayish-blue);
 }
@@ -60,7 +60,7 @@ body {
   border: none;
   border-radius: 5px;
   color: var(--light-cyan);
-  font-family: 'Cairo', sans-serif;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
   background-color: var(--dark-grayish-blue);
   box-shadow: 0 3px 0 0 var(--grayish-blue);
 }
